--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUOTES</title>
     <style type="text/css" media="all">
-      
+      *{
+        box-sizing: border-box;
+      }
+      body{
+        margin: 0;padding: 0;
+        background-color: lightblue;
+      }
+      .container{
+        width: 100vw;height: 100px;
+      }
     </style>
   </head>
   <body>
-    <h1>harus kuat</h1>
+    <div class="container">
+      
+    </div>
   </body>
 </html>
