--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
       body{
         margin: 0;padding: 0;
-        background-color: lightblue;
+        background-color: lightgreen;
       }
       .container{
         width: 100vw;height: 100px;
